// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`driver.route.peer-budget-isolation.acceptance given: [journey] per-stone budget isolation when: [t1.5] third alpha attempt, review skipped (exhausted) then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: shared-reviewer (l1, 2/2)
   │   ├─ exhausted, cached
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.alpha._.review.i002.7b0642204fa64344b4.r001._.given.by_peer.shared-reviewer.md
   │   └─ taken: .reviews/peer/1.alpha._.review.i002.7b0642204fa64344b4.r001._.taken.by_self.shared-reviewer.md
   │
   └─ halted: peer reviewer budget exhausted

🗿 route.stone.set
   ├─ stone = 1.alpha
   ├─ passage = blocked
   ├─ reason = peer reviewer budget exhausted: shared-reviewer
   ├─ options
   │  ├─ increase budget
   │  │  └─ rhx route.guard.budget --for review --add N --peer shared-reviewer --stone 1.alpha
   │  └─ approve as-is
   │     └─ rhx route.stone.set --stone 1.alpha --as approved
   └─ guard
      ├─ artifacts
      │   └─ alpha/**/*.ts
      └─ reviews
          └─ r1: shared-reviewer (l1, 2/2)
              ├─ exhausted, cached
              ├─ 1 blocker 🔴
              ├─ 0 nitpicks ✓
              ├─ given: .reviews/peer/1.alpha._.review.i002.7b0642204fa64344b4.r001._.given.by_peer.shared-reviewer.md
              └─ taken: .reviews/peer/1.alpha._.review.i002.7b0642204fa64344b4.r001._.taken.by_self.shared-reviewer.md
"
`;

exports[`driver.route.peer-budget-isolation.acceptance given: [journey] per-stone budget isolation when: [t1] second alpha attempt exhausts budget then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: shared-reviewer (l1, 2/2)
   │   ├─ rejected [TIME]
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.alpha._.review.i002.7b0642204fa64344b4.r001._.given.by_peer.shared-reviewer.md
   │   └─ taken: .reviews/peer/1.alpha._.review.i002.7b0642204fa64344b4.r001._.taken.by_self.shared-reviewer.md
   │
   └─ ✗ judge.1 - blocked [TIME]

🗿 route.stone.set
   ├─ stone = 1.alpha
   ├─ passage = blocked
   ├─ reason = blockers exceed threshold (1 > 0)
   └─ guard
      ├─ artifacts
      │   └─ alpha/**/*.ts
      ├─ reviews
      │   └─ r1: shared-reviewer (l1, 2/2)
      │       ├─ rejected [TIME]
      │       ├─ 1 blocker 🔴
      │       ├─ 0 nitpicks ✓
      │       ├─ given: .reviews/peer/1.alpha._.review.i002.7b0642204fa64344b4.r001._.given.by_peer.shared-reviewer.md
      │       └─ taken: .reviews/peer/1.alpha._.review.i002.7b0642204fa64344b4.r001._.taken.by_self.shared-reviewer.md
      └─ judges
          └─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 1
              ├─ finished [TIME] ✗
              └─ reason: blockers exceed threshold (1 > 0)
"
`;

exports[`driver.route.peer-budget-isolation.acceptance given: [journey] per-stone budget isolation when: [t3] beta artifact created, verify fresh budget then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: shared-reviewer (l1, 1/2)
   │   ├─ rejected [TIME]
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/2.beta._.review.i001.e4d78222654bf1beda.r001._.given.by_peer.shared-reviewer.md
   │   └─ taken: .reviews/peer/2.beta._.review.i001.e4d78222654bf1beda.r001._.taken.by_self.shared-reviewer.md
   │
   └─ ✗ judge.1 - blocked [TIME]

🗿 route.stone.set
   ├─ stone = 2.beta
   ├─ passage = blocked
   ├─ reason = blockers exceed threshold (1 > 0)
   └─ guard
      ├─ artifacts
      │   └─ beta/**/*.ts
      ├─ reviews
      │   └─ r1: shared-reviewer (l1, 1/2)
      │       ├─ rejected [TIME]
      │       ├─ 1 blocker 🔴
      │       ├─ 0 nitpicks ✓
      │       ├─ given: .reviews/peer/2.beta._.review.i001.e4d78222654bf1beda.r001._.given.by_peer.shared-reviewer.md
      │       └─ taken: .reviews/peer/2.beta._.review.i001.e4d78222654bf1beda.r001._.taken.by_self.shared-reviewer.md
      └─ judges
          └─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 1
              ├─ finished [TIME] ✗
              └─ reason: blockers exceed threshold (1 > 0)
"
`;

exports[`driver.route.peer-budget-isolation.acceptance given: [journey] per-stone budget isolation when: [t4] beta passes within budget then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: shared-reviewer (l1, 2/2)
   │   ├─ approved [TIME]
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/2.beta._.review.i002.891c50a3c7d474cdf4.r001._.given.by_peer.shared-reviewer.md
   │   └─ taken: .reviews/peer/2.beta._.review.i002.891c50a3c7d474cdf4.r001._.taken.by_self.shared-reviewer.md
   │
   └─ ✓ judge.1 - allowed [TIME]

🗿 route.stone.set
   ├─ stone = 2.beta
   ├─ passage = allowed
   ├─ guard
   │  ├─ artifacts
   │  │   └─ beta/**/*.ts
   │  ├─ reviews
   │  │   └─ r1: shared-reviewer (l1, 2/2)
   │  │       ├─ approved [TIME]
   │  │       ├─ 0 blockers ✓
   │  │       ├─ 0 nitpicks ✓
   │  │       ├─ given: .reviews/peer/2.beta._.review.i002.891c50a3c7d474cdf4.r001._.given.by_peer.shared-reviewer.md
   │  │       └─ taken: .reviews/peer/2.beta._.review.i002.891c50a3c7d474cdf4.r001._.taken.by_self.shared-reviewer.md
   │  └─ judges
   │      └─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 1
   │          └─ finished [TIME] ✓
   │
   └─ the way continues, run
      └─ rhx route.drive
"
`;
